--- a/notebooks/predict_cuba.ipynb
+++ b/notebooks/predict_cuba.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -53,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\"../data/paises-info-dias.json\") as fp:\n",
@@ -73,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def similarity(country, exponent=1, normalize=True):\n",
@@ -113,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -355,6 +363,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -365,7 +374,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -438,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -499,7 +512,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "steps_back = 10\n",
@@ -512,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -560,7 +577,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
@@ -570,7 +589,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_model():\n",
@@ -600,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -627,7 +650,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -645,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "serie = ts_cuba\n",
@@ -666,7 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -704,7 +733,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt"
@@ -720,7 +751,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -760,30 +793,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probando sin comparar contra la curva corrida"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "similarities = {\n",
+    "    name: (values, similarity(values, exponent, normalize)) \n",
+    "    for name,values in countries_data['paises'].items() \n",
+    "    if len(values) >= k + len(ts_cuba)\n",
+    "    if name in countries_to_analize\n",
+    "}\n",
+    "\n",
+    "print(\"Cuba\", \"0\", ts_cuba)\n",
+    "\n",
+    "most_similar_curves = sorted(similarities.items(), key=lambda t: t[1][1])[:10] \n",
+    "\n",
+    "for i,(values, s) in most_similar_curves:\n",
+    "    print(i, s, values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X, y = extract_features({\n",
+    "    k:v[0] \n",
+    "    for k,v in most_similar_curves\n",
+    "})\n",
+    "\n",
+    "lr = build_model()\n",
+    "predict(lr, ts_cuba, simulations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y = []\n",
+    "    \n",
+    "for i in range(30):    \n",
+    "    lr = build_model()\n",
+    "    yp = predict(lr, serie, n=simulations, previous=previous)\n",
+    "    yp.insert(0, serie[-previous])\n",
+    "    Y.append(yp)\n",
+    "    \n",
+    "Y = np.asarray(Y)\n",
+    "\n",
+    "ymean = Y.mean(axis=0)\n",
+    "ystdv = Y.std(axis=0)\n",
+    "\n",
+    "ymean, ystdv\n",
+    "\n",
+    "for i, (x,s) in enumerate(zip(ymean, ystdv)):\n",
+    "    print(\"Day %i: %.0f (± %.0f @ 95%%)\" % (i, x, 3*s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(range(1, len(serie)+1), serie)\n",
+    "plt.plot(range(len(serie)+1-previous, len(serie)+1+len(ymean)-previous), ymean)\n",
+    "plt.fill_between(range(len(serie)+1-previous, len(serie)+1+len(ymean)-previous), \n",
+    "                 ymean-ystdv*3, \n",
+    "                 ymean+ystdv*3, \n",
+    "                 color='lightgrey')\n",
+    "plt.fill_between(range(len(serie)+1-previous, len(serie)+1+len(ymean)-previous), \n",
+    "                 ymean-ystdv*1.6, \n",
+    "                 ymean+ystdv*1.6, \n",
+    "                 color='darkgrey')\n",
+    "plt.title(\"Cuba\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
